--- a/index.html
+++ b/index.html
@@ -27,36 +27,22 @@
 
             <div><img src="./img/2.webp" alt=""></div>
             <div class="details">
-                <h1>Rudro</h1>
+                <h1>FREE FITNESS
+                    TRAINING</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum
-                    interdum,
-                    nisi lorem
-                    egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue
-                    eget, auctor
-                    vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu,
-                    lobortis in
-                    odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi,
-                    sed
-                    ullamcorper
-                    ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui
-                    eget
-                    tellus gravida
-                    venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras
-                    ac
-                    leo purus.
-                    Mauris quis diam velit.</p>
+                    A small river named Duden flows by their place and supplies it with the necessary regelialia. It is
+                    a paradisematic
+                    country, in which roasted parts of sentences fly into your mouth.</p>
                 <button class="button">Click</button>
             </div>
         </section>
         <section class="section3">
             <div><img src="./img/3.webp" alt=""></div>
             <div>
-                <h1>Rudro</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda unde fuga voluptas reiciendis?
-                    Veritatis, distinctio doloribus praesentium culpa at debitis cupiditate velit explicabo earum rerum
-                    quas soluta recusandae quam ipsam sit. Quas minus sapiente assumenda alias incidunt eius delectus
-                    natus?</p>
+                <h1>NO COMMENTMENT MEMBERSHIPS</h1>
+                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
+                    paradisematic
+                    country, in which roasted parts of sentences fly into your mouth.</p>
                 <button class="button">Click</button>
             </div>
 
