--- a/contact.html
+++ b/contact.html
@@ -17,43 +17,46 @@
                 <a href="./contact.html">Contact</a>
             </div>
         </nav>
+        <section class="contasection">
 
-        <div class="animation">
-            <section>
-                <article class="contsection1">
-                    <h1>FIRST NAME</h1>
-                    <input type="text" placeholder="please enter your first name">
-                    <article>
-                        <h1>LAST NAME</h1>
-                        <input type="text" placeholder="please enter your last name">
+
+            <div class="animation">
+                <section class="contactsection1">
+                    <article class="contsection1">
+                        <h1>FIRST NAME</h1>
+                        <input type="text" placeholder="please enter your first name">
                         <article>
-                            <h1>Email</h1>
-                            <input type="text" placeholder="please enter your email address">
-                            <h1>MESSAGE</h1>
-                            <input type="text" placeholder="optional">
-                            <h1>ADDITIONAL DETAILS</h1>
-                            <input type="text" placeholder="optional">
-                            <button>Send Messege</button>
+                            <h1>LAST NAME</h1>
+                            <input type="text" placeholder="please enter your last name">
+                            <article class="contarticlenth">
+                                <h1>Email</h1>
+                                <input type="text" placeholder="please enter your email address">
+                                <h1>MESSAGE</h1>
+                                <input type="text" placeholder="optional">
+                                <h1>ADDITIONAL DETAILS</h1>
+                                <input type="text" placeholder="optional" id="contarticlenth">
+                                <button class="contbtn"><span>Send</span></button>
 
-                        </article>
-            </section>
-            <section>
+                            </article>
+                </section>
+                <section>
 
-                <h1>Contact Information</h1>
-                <p>Lorem ipsum dolor sit.</p>
-                <span>+31626208810</span>
-                <h3>Farzanamirazzz@gmail.com</h3>
-            </section>
+                    <h1>Contact Information</h1>
+                    <p>Lorem ipsum dolor sit.</p>
+                    <span>+31626208810</span>
+                    <h3>Farzanamirazzz@gmail.com</h3>
+                </section>
 
 
-            <div class="container">
-                <div class="circle1">
-                    <div class="circle2">
+                <div class="container">
+                    <div class="circle1">
+                        <div class="circle2">
 
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
     </body>
 
 </html>
