--- a/about.html
+++ b/about.html
@@ -18,9 +18,10 @@
             </div>
         </nav>
         <section class="aboutsection">
+
             <ul class="aboutnavigation">
-                <li><a href="">Home</a></li>
-                <li> <a href="">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li> <a href="about.html">About</a></li>
             </ul>
         </section>
         <section class="aboutsection1">
