--- a/contact.html
+++ b/contact.html
@@ -19,60 +19,58 @@
                 <a href="./contact.html">Contact</a>
             </div>
         </nav>
-        <section class="contasection">
 
 
-            <div class="animation">
-                <section class="contactsection1">
-                    <article class="contsection1">
-                        <h1>FIRST NAME</h1>
-                        <input type="text" placeholder="please enter your first name">
-                        <article>
-                            <h1>LAST NAME</h1>
-                            <input type="text" placeholder="please enter your last name">
-                            <article class="contarticlenth">
-                                <h1>Email</h1>
-                                <input type="text" placeholder="please enter your email address">
-                                <h1>MESSAGE</h1>
-                                <input type="text" placeholder="optional">
-                                <h1>ADDITIONAL DETAILS</h1>
-                                <input type="text" placeholder="optional" id="contarticlenth">
-                                <button class="contbtn"><span>Send</span></button>
 
-                            </article>
-                </section>
-                <section>
+        <section class="animation">
+            <section class="contactsection1">
+                <article class="contsection1">
+                    <h1>FIRST NAME</h1>
+                    <input type="text" placeholder="please enter your first name">
 
-                    <h1>Contact Information</h1>
-                    <p>Lorem ipsum dolor sit.</p>
-                    <span>
-                        <i class="fas fa-phone"></i>
-                        +31626208810
+                    <h1>LAST NAME</h1>
+                    <input type="text" placeholder="please enter your last name">
+
+                    <h1>Email</h1>
+                    <input type="text" placeholder="please enter your email address">
+                    <h1>MESSAGE</h1>
+                    <input type="text" placeholder="optional">
+                    <h1>ADDITIONAL DETAILS</h1>
+                    <input type="text" placeholder="optional" id="contarticlenth">
+                    <button class="contbtn"><span>Send</span></button>
+
+                </article>
+            </section>
+            <section>
+
+                <h1>Contact Information</h1>
+                <p>Lorem ipsum dolor sit.</p>
+                <span>
+                    <i class="fas fa-phone"></i>
+                    +31626208810
+                </span>
+                <h3>
+                    <i class="fas fa-envelope" id="contactemailicon"></i>
+                    Farzanamirazzz@gmail.com
+                </h3>
+            </section>
+            <section class="contactsection2">
+                <article class="circle1">
+                    <span class="circle2">
+
                     </span>
-                    <h3>
-                        <i class="fas fa-envelope" id="contactemailicon"></i>
-                        Farzanamirazzz@gmail.com
-                    </h3>
-                </section>
-
-
-                <div class="container">
-                    <div class="circle1">
-                        <div class="circle2">
-
-                        </div>
-                    </div>
+                </article>
                 </div>
-            </div>
+            </section>
         </section>
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path
                 d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm0 22c-5.291 0-10-4.708-10-10 0-1.862.527-3.571 1.43-5.042L16.958 20.57A9.969 9.969 0 0 1 12 22zm6.57-4.958L6.042 5.43A9.968 9.968 0 0 1 12 2a9.97 9.97 0 0 1 5.042 1.43z" />
-        </svg>
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        </svg> -->
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path
                 d="M20.984 3H3.016A2.02 2.02 0 0 0 1 5.016v13.968A2.02 2.02 0 0 0 3.016 21H20.98A2.02 2.02 0 0 0 23 18.984V5.016A2.02 2.02 0 0 0 20.984 3zm0 2.016L12 12.827 3.016 5.016h17.968zM2 5.016v13.968A1.982 1.982 0 0 1 3.016 18h-2.01A2.002 2.002 0 0 1 1 15.984V5.016A1.982 1.982 0 0 1 3.016 3h2.01A2.002 2.002 0 0 1 7 5.016z" />
-        </svg>
+        </svg> -->
     </body>
 
 </html>
