--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             </ul>
         </section>
         <section class="aboutsection1">
-            <div class="section1details">
+            <article class="section1details">
                 <p>BEGGINER & ADVANCED</p>
                 <h1>MEDITATION SESSIONS</h1>
                 <p>Etiam pretium, nibh vitae varius ultricies, tellus diam gravida elit, vel rhoncus eros eros sit amet
@@ -38,8 +38,8 @@
                     nulla. Fusce quis
                     tempor risus, non elementum dui. Curabitur et mattis ex, a ultrices lorem.</p>
                 <button class="button">Learn More</button>
-            </div>
-            <div class="aboutimg"><img src="./img/7.webp" alt=""></div>
+            </article>
+            <img src="./img/7.webp" alt="">
 
         </section>
         <section class="clientsection">
