--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <section class="section2">
 
 
-            <div><img src="./img/2.webp" alt=""></div>
-            <div class="details">
+
+            <article class="details">
                 <h1>FREE FITNESS
                     TRAINING</h1>
                 <p>
@@ -34,17 +34,19 @@
                     a paradisematic
                     country, in which roasted parts of sentences fly into your mouth.</p>
                 <button class="button">Click</button>
-            </div>
+
+            </article>
+            <img src="./img/2.webp" alt="">
         </section>
         <section class="section3">
-            <div><img src="./img/3.webp" alt=""></div>
-            <div>
+            <img src="./img/7b01b2ed4ddcb8f52.jpg" alt="">
+            <article>
                 <h1>NO COMMENTMENT MEMBERSHIPS</h1>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
                     paradisematic
                     country, in which roasted parts of sentences fly into your mouth.</p>
                 <button class="button">Click</button>
-            </div>
+            </article>
 
         </section>
 
