--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
                 </article>
             </section>
-            <section>
+            <section id="contactsection2">
 
                 <h1>Contact Information</h1>
                 <p>Lorem ipsum dolor sit.</p>
