--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 
     <body>
         <nav class="navigation">
-            <div class="navsection">
+            <article class="navsection">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="location.html">Location</a>
                 <a href="./contact.html">Contact</a>
-            </div>
+            </article>
         </nav>
+
+
         <section class="section1">
             <h1>Welcome to YOGIS Youga center</h1>
 
@@ -49,8 +51,6 @@
             </article>
 
         </section>
-
-
 
 
         <footer class="footer">
