--- a/about.html
+++ b/about.html
@@ -11,22 +11,27 @@
     </head>
 
     <body>
+
         <nav class="navigation">
-            <div class="navsection">
+            <article class="navsection">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="location.html">Location</a>
-                <a href="contact.html">Contact</a>
-            </div>
+                <a href="./contact.html">Contact</a>
+            </article>
         </nav>
-        <section class="aboutsection">
+
+
+        <section class="aboutsection1">
 
             <ul class="aboutnavigation">
                 <li><a href="index.html">Home</a></li>
                 <li> <a href="about.html">About</a></li>
+                <li><a href="location.html">Location</a> </li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </section>
-        <section class="aboutsection1">
+        <section class="aboutsection2">
             <article class="section1details">
                 <p>BEGGINER & ADVANCED</p>
                 <h1>MEDITATION SESSIONS</h1>
@@ -42,7 +47,7 @@
             <img src="./img/7.webp" alt="">
 
         </section>
-        <section class="clientsection">
+        <section class="aboutsection3">
 
 
 
@@ -91,6 +96,20 @@
 
             </article>
         </section>
+
+
+
+        <footer class="footer">
+            <article class="">
+                <ion-icon name="logo-facebook"></ion-icon>
+                <ion-icon name="logo-twitter"></ion-icon>
+                <ion-icon name="logo-instagram"></ion-icon>
+                <p>All Content © Copyright Yoga International 2023. All Rights Reserved.</p>
+            </article>
+            <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+            <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+        </footer>
     </body>
 
 </html>
