--- a/location.html
+++ b/location.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+
         <nav class="navigation">
             <article class="navsection">
                 <a href="index.html">Home</a>
@@ -17,8 +18,10 @@
                 <a href="./contact.html">Contact</a>
             </article>
         </nav>
+
+
         <section class="locasection1">
-            <section class="location">
+            <article class="location">
                 <h2>Our Office</h2>
                 <p>Zandvoort ,
                     Haarlem Spaarnwoude
@@ -26,14 +29,25 @@
 
 
 
-            </section>
+            </article>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.67890!2d-123.456789!3d12.345678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDEwJzA0LjUiTiAxMjfCsDAwJzQ2LjEiVw!5e0!3m2!1sen!2sus!4v1234567890123"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                class="locationiframe"></iframe>
+                width="700" height="400" class="locationiframe"></iframe>
 
         </section>
 
+
+        <footer class="footer">
+            <article class="">
+                <ion-icon name="logo-facebook"></ion-icon>
+                <ion-icon name="logo-twitter"></ion-icon>
+                <ion-icon name="logo-instagram"></ion-icon>
+                <p>All Content © Copyright Yoga International 2023. All Rights Reserved.</p>
+            </article>
+            <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+            <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+        </footer>
     </body>
 
 </html>
