--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
                 <li> <a href="about.html">About</a></li>
                 <li><a href="location.html">Location</a> </li>
                 <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./photo.html">Photo</a></li>
             </ul>
         </section>
         <section class="aboutsection2">
@@ -104,7 +105,7 @@
                 <ion-icon name="logo-facebook"></ion-icon>
                 <ion-icon name="logo-twitter"></ion-icon>
                 <ion-icon name="logo-instagram"></ion-icon>
-                <p>All Content © Copyright Yoga International 2023. All Rights Reserved.</p>
+                <p>All Content © Copyright YOGIS Youga Center 2023. All Rights Reserved.</p>
             </article>
             <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
             <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
