--- a/photo.html
+++ b/photo.html
@@ -4,12 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
         <title>Document</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-
         <nav class="navigation">
             <article class="navsection">
                 <a href="index.html">Home</a>
@@ -20,19 +19,19 @@
         </nav>
 
 
-        <section class="locasection1">
-            <article class="location">
-                <h2>Our Office</h2>
-                <p>Zandvoort ,
-                    Haarlem Spaarnwoude
-                </p>
-
-
-
-            </article>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.67890!2d-123.456789!3d12.345678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDEwJzA0LjUiTiAxMjfCsDAwJzQ2LjEiVw!5e0!3m2!1sen!2sus!4v1234567890123"
-                width="700" height="400" class="locationiframe"></iframe>
+        <article class="photoarticle">
+            <h1>Our Working other place document</h1>
+        </article>
+        <section class="photosection1">
+            <img src="./img/IMG-20231026-WA0010.jpg" alt="photo">
+            <img src="./img/IMG-20231026-WA0011.jpg" alt="photo">
+            <img src="./img/IMG-20231026-WA0012.jpg" alt="photo">
+            <img src="./img/IMG-20231026-WA0013.jpg" alt="photo">
+            <img src="./img/IMG-20231026-WA0014.jpg" alt="photo">
+            <img src="./img/IMG-20231026-WA0015.jpg" alt="photo">
+            <img src="./img/IMG-20231026-WA0016.jpg" alt="photo">
+            <img src="./img/IMG-20231026-WA0017.jpg" alt="photo">
+            <img src="./img/IMG-20231026-WA0018.jpg" alt="photo">
 
         </section>
 
