--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                 <ion-icon name="logo-facebook"></ion-icon>
                 <ion-icon name="logo-twitter"></ion-icon>
                 <ion-icon name="logo-instagram"></ion-icon>
-                <p>All Content © Copyright Yoga International 2023. All Rights Reserved.</p>
+                <p>All Content © Copyright YOGIS Youga Center 2023. All Rights Reserved.</p>
             </article>
             <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
             <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
