--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
                 <li><a href="location.html">Location</a> </li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./photo.html">Photo</a></li>
+                <li><a href="./owner.html">Owner</a></li>
             </ul>
         </section>
         <section class="aboutsection2">
