--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
         <footer class="footer">
-            <article class="">
+            <article>
                 <ion-icon name="logo-facebook"></ion-icon>
                 <ion-icon name="logo-twitter"></ion-icon>
                 <ion-icon name="logo-instagram"></ion-icon>
