--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>YoGis</title>
 
         <link rel="stylesheet" href="style.css">
     </head>
@@ -20,36 +20,40 @@
         </nav>
 
 
-        <section class="section1">
-            <h1>Welcome to YOGIS Youga center</h1>
+        <section class="mainhomesection">
+            <section class="section1">
+                <h1>Welcome to YOGIS Youga center</h1>
 
-        </section>
-        <section class="section2">
+            </section>
+            <section class="section2">
 
 
 
-            <article class="details">
-                <h1>FREE FITNESS
-                    TRAINING</h1>
-                <p>
-                    A small river named Duden flows by their place and supplies it with the necessary regelialia. It is
-                    a paradisematic
-                    country, in which roasted parts of sentences fly into your mouth.</p>
-                <button class="button">Click</button>
+                <article class="details">
+                    <h1>FREE FITNESS
+                        TRAINING</h1>
+                    <p>
+                        A small river named Duden flows by their place and supplies it with the necessary regelialia. It
+                        is
+                        a paradisematic
+                        country, in which roasted parts of sentences fly into your mouth.</p>
+                    <button class="button">Click</button>
 
-            </article>
-            <img src="./img/2.webp" alt="">
-        </section>
-        <section class="section3">
-            <img src="./img/7b01b2ed4ddcb8f52.jpg" alt="">
-            <article>
-                <h1>NO COMMENTMENT MEMBERSHIPS</h1>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-                    paradisematic
-                    country, in which roasted parts of sentences fly into your mouth.</p>
-                <button class="button">Click</button>
-            </article>
+                </article>
+                <img src="./img/2.webp" alt="">
+            </section>
+            <section class="section3">
+                <img src="./img/7b01b2ed4ddcb8f52.jpg" alt="">
+                <article>
+                    <h1>NO COMMENTMENT MEMBERSHIPS</h1>
+                    <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It
+                        is a
+                        paradisematic
+                        country, in which roasted parts of sentences fly into your mouth.</p>
+                    <button class="button">Click</button>
+                </article>
 
+            </section>
         </section>
 
 
