--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>About</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,82 +21,85 @@
             </article>
         </nav>
 
+        <section class="mainaboutsection">
+            <section class="aboutsection1">
 
-        <section class="aboutsection1">
+                <ul class="aboutnavigation">
+                    <li><a href="index.html">Home</a></li>
+                    <li> <a href="about.html">About</a></li>
+                    <li><a href="location.html">Location</a> </li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./photo.html">Photo</a></li>
+                    <li><a href="./owner.html">Owner</a></li>
+                </ul>
+            </section>
+            <section class="aboutsection2">
+                <article class="section1details">
+                    <p>BEGGINER & ADVANCED</p>
+                    <h1>MEDITATION SESSIONS</h1>
+                    <p>Etiam pretium, nibh vitae varius ultricies, tellus diam gravida elit, vel rhoncus eros eros sit
+                        amet
+                        ipsum. Cras cursus
+                        pellentesque tortor. Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et
+                        malesuada fames ac ante
+                        ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non
+                        mattis
+                        nulla. Fusce quis
+                        tempor risus, non elementum dui. Curabitur et mattis ex, a ultrices lorem.</p>
+                    <button class="button">Learn More</button>
+                </article>
+                <img src="./img/7.webp" alt="">
 
-            <ul class="aboutnavigation">
-                <li><a href="index.html">Home</a></li>
-                <li> <a href="about.html">About</a></li>
-                <li><a href="location.html">Location</a> </li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./photo.html">Photo</a></li>
-                <li><a href="./owner.html">Owner</a></li>
-            </ul>
-        </section>
-        <section class="aboutsection2">
-            <article class="section1details">
-                <p>BEGGINER & ADVANCED</p>
-                <h1>MEDITATION SESSIONS</h1>
-                <p>Etiam pretium, nibh vitae varius ultricies, tellus diam gravida elit, vel rhoncus eros eros sit amet
-                    ipsum. Cras cursus
-                    pellentesque tortor. Ut pellentesque auctor lorem, at maximus lacus faucibus nec. Interdum et
-                    malesuada fames ac ante
-                    ipsum primis in faucibus. Mauris auctor nunc non nulla euismod consequat. Pellentesque non mattis
-                    nulla. Fusce quis
-                    tempor risus, non elementum dui. Curabitur et mattis ex, a ultrices lorem.</p>
-                <button class="button">Learn More</button>
-            </article>
-            <img src="./img/7.webp" alt="">
-
-        </section>
-        <section class="aboutsection3">
+            </section>
+            <section class="aboutsection3">
 
 
 
-            <h2>User Profile Card</h2>
+                <h2>User Profile Card</h2>
 
-            <article id="userclientsection">
-                <div class="card">
-                    <img src="./img/person.jpeg" alt="John" style="width:100%">
-                    <h1>John Doe</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>Harvard University</p>
-                    <div id="clientsection">
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                    </div>
-                    <p><button>Contact</button></p>
-                </div>
-                <div class="card">
-                    <img src="./img/1613405959052.jpeg" alt="John" style="width:75%">
-                    <h1>Hardik pande</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>Harvard University</p>
-                    <div id="clientsection">
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                    </div>
-                    <p><button>Contact</button></p>
-                </div>
-                <div class="card">
-                    <img src="./img/Max-R_Headshot (1).jpg" alt="John" style="width:75%">
-                    <h1>Ratik Runde</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>Harvard University</p>
-                    <div id="clientsection">
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                    </div>
-                    <p><button>Contact</button></p>
-                </div>
+                <article id="userclientsection">
+                    <section class="card">
+                        <img src="./img/person.jpeg" alt="John" style="width:100%">
+                        <h1>John Doe</h1>
+                        <p class="title">CEO & Founder, Example</p>
+                        <p>Harvard University</p>
+                        <section id="clientsection">
+                            <a href="#"><i class="fa fa-dribbble"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                        </section>
+                        <p><button>Contact</button></p>
+                    </section>
+                    <section class="card">
+                        <img src="./img/1613405959052.jpeg" alt="John" style="width:75%">
+                        <h1>Hardik pande</h1>
+                        <p class="title">CEO & Founder, Example</p>
+                        <p>Harvard University</p>
+                        <section id="clientsection">
+                            <a href="#"><i class="fa fa-dribbble"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                        </section>
+                        <p><button>Contact</button></p>
+                    </section>
+                    <section class="card">
+                        <img src="./img/Max-R_Headshot (1).jpg" alt="John" style="width:75%">
+                        <h1>Ratik Runde</h1>
+                        <p class="title">CEO & Founder, Example</p>
+                        <p>Harvard University</p>
+                        <section id="clientsection">
+                            <a href="#"><i class="fa fa-dribbble"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                        </section>
+                        <p><button>Contact</button></p>
+                    </section>
 
-            </article>
+                </article>
+            </section>
         </section>
 
 
