--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="location.html">Location</a>
+                <a href="./photo.html">Photo</a>
+                <a href="./owner.html">Owner</a>
                 <a href="./contact.html">Contact</a>
             </article>
         </nav>
@@ -28,9 +30,9 @@
                     <li><a href="index.html">Home</a></li>
                     <li> <a href="about.html">About</a></li>
                     <li><a href="location.html">Location</a> </li>
-                    <li><a href="./contact.html">Contact</a></li>
                     <li><a href="./photo.html">Photo</a></li>
                     <li><a href="./owner.html">Owner</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </section>
             <section class="aboutsection2">
