--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,8 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="location.html">Location</a>
+                <a href="./photo.html">Photo</a>
+                <a href="./owner.html">Owner</a>
                 <a href="./contact.html">Contact</a>
             </article>
         </nav>
@@ -47,7 +49,7 @@
 
                     </span>
                 </article>
-                </div>
+
             </section>
             <section class="contactsection3">
 
