--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
     </head>
 
     <body>
+
+
         <nav class="navigation">
+
             <article class="navsection">
+                <img src="./img/logo5955.png" alt="">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="location.html">Location</a>
+                <a href="./photo.html">Photo</a>
                 <a href="./contact.html">Contact</a>
             </article>
         </nav>
+
 
 
         <section class="mainhomesection">
@@ -53,6 +59,25 @@
                     <button class="button">Click</button>
                 </article>
 
+            </section>
+            <section class="sectionbody">
+                <article class="login-container">
+                    <article class="login-box">
+                        <h2>Log in to Yogis</h2>
+                        <form>
+                            <article class="form-group">
+                                <label for="email">Email or Phone</label>
+                                <input type="text" id="email" name="email" required>
+                            </article>
+                            <article class="form-group">
+                                <label for="password">Password</label>
+                                <input type="password" id="password" name="password" required>
+                            </article>
+                            <button type="submit" class="button">Log In</button>
+                            <article class="forgot-password">Forgot Password?</article>
+                        </form>
+                    </article>
+                </article>
             </section>
         </section>
 
