--- a/location.html
+++ b/location.html
@@ -15,6 +15,8 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="location.html">Location</a>
+                <a href="./photo.html">Photo</a>
+                <a href="./owner.html">Owner</a>
                 <a href="./contact.html">Contact</a>
             </article>
         </nav>
