--- a/owner.html
+++ b/owner.html
@@ -21,12 +21,14 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="location.html">Location</a>
+                <a href="./photo.html">Photo</a>
+                <a href="./owner.html">Owner</a>
                 <a href="./contact.html">Contact</a>
             </article>
         </nav>
 
 
-        <section>
+        <section class="ownermainsection">
 
             <article class="header">
                 <h1>Yoga has many meaning</h1>
