--- a/photo.html
+++ b/photo.html
@@ -14,6 +14,8 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="location.html">Location</a>
+                <a href="./photo.html">Photo</a>
+                <a href="./owner.html">Owner</a>
                 <a href="./contact.html">Contact</a>
             </article>
         </nav>
@@ -23,15 +25,39 @@
             <h1>Our Working other place document</h1>
         </article>
         <section class="photosection1">
-            <img src="./img/IMG-20231026-WA0010.jpg" alt="photo">
-            <img src="./img/IMG-20231026-WA0011.jpg" alt="photo">
-            <img src="./img/IMG-20231026-WA0012.jpg" alt="photo">
-            <img src="./img/IMG-20231026-WA0013.jpg" alt="photo">
-            <img src="./img/IMG-20231026-WA0014.jpg" alt="photo">
-            <img src="./img/IMG-20231026-WA0015.jpg" alt="photo">
-            <img src="./img/IMG-20231026-WA0016.jpg" alt="photo">
-            <img src="./img/IMG-20231026-WA0017.jpg" alt="photo">
-            <img src="./img/IMG-20231026-WA0018.jpg" alt="photo">
+            <article class="photodetails">
+                <img src="./img/IMG-20231026-WA0010.jpg" alt="photo">
+                <h1>Our service and Offerings</h1>
+                <p>In zandvoort
+                    Greet visitors and introduce our yoga center. Our yoga center's scenic location and serene
+                    ambiance.our baest place for
+                    visitors to explore our services and offerings.</p>
+            </article>
+            <article class="photodetails">
+                <img src="./img/IMG-20231026-WA0012.jpg" alt="photo" height="23%">
+                <h1>Our experienced youga insrtuctors</h1>
+                <p>Yoga is renowned for its holistic benefits, both physical and mental. The practice of yoga asanas
+                    (postures) not only
+                    enhances flexibility and strength but also fosters inner peace. At Zanvoory Beach Yoga Center,
+                    instructors guide
+                    participants through a variety of yoga styles, from the gentle flow of Hatha to the dynamic energy
+                    of Vinyasa. The union
+                    of breath and movement within the context of the beach's natural beauty leads to profound physical
+                    and mental
+                    well-being.Introduce our experienced yoga instructors.</p>
+            </article>
+            <article class="photodetails">
+                <img src="./img/IMG-20231026-WA0015.jpg" alt="photo" height="22%">
+
+                <h1>Community and Connection</h1>
+                <p>Zanvoory Beach Yoga Center is not just a place for individual practice; it's a hub for building a
+                    like-minded community.
+                    Yoga practitioners from all walks of life come together to share their experiences, forming deep
+                    connections that extend
+                    beyond the mat. The center hosts group classes, workshops, and events that foster a sense of
+                    togetherness and support
+                    for one another's yoga journey.</p>
+            </article>
 
         </section>
 
