--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navigation">
 
             <article class="navsection">
-                <img src="./img/logo5955.png" alt="">
+                <img src="./img/logo3801.png" alt="">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="location.html">Location</a>
@@ -28,7 +28,7 @@
 
         <section class="mainhomesection">
             <section class="section1">
-                <h1>Welcome to YOGIS Youga center</h1>
+                <h1>Welcome to YOGIS Yoga center</h1>
 
             </section>
             <section class="section2">
