--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navigation">
 
             <article class="navsection">
-                <img src="./img/logo3801.png" alt="">
+                <img src="./img/logo-Presentation1.gif" alt="logo">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="location.html">Location</a>
